--- a/presentations/2022-10-26_code-readability/2022-10-26_code-readability.qmd
+++ b/presentations/2022-10-26_code-readability/2022-10-26_code-readability.qmd
@@ -13,6 +13,7 @@ format:
 # Welcome to the Programming Cafe! {background-color="#FFCD00"}
 
 ![](./templates/UU_logo_2021_EN_RGB.png){.absolute top=-200 left=-240 width="300" height="120"}
+---
 
 ## Plan for today
 
@@ -21,149 +22,246 @@ format:
 |    |    |
 |------------------------------|-------------|
 | Welcome | 10 min |
-| Introduction to Style Guides for Code | 10 min |
-| Introduction to Linters & (Auto)Formatters | 10 min |
-| Linters & FOrmatters in R & Python | 10 min |
+| Introduction to Code Readability | 15 min |
+| Linters & Formatters in R & Python | 15 min |
 | Exercises or Work on your own code | 60 min |
 | Wrap-up | 10 min |
 | Drinks! |
 
 :::
 
+---
+
 ## Programming Cafe
 
 ::: {style="text-align: left; margin-top: 2em"}
 
--    R-Cafe
--    Community event
--    Themes
--    Presentations
+-    Previously the R-Cafe
+-    An informal, community event
 -    Work on your own code
--    Exercises
+-    Themes with presentations and exercises
 -    Interaction
 :::
 
 # Code Readability {background-color="#FFCD00"}
 
-
-
-Research Data Management Support
-
-![](./templates/UU_logo_2021_EN_RGB.png){.absolute top=-200 left=-240 width="300" height="120"}
 ---
 
-## Quarto
+## Good quality code is:
+
 ::: {style="text-align: left; margin-top: 2em"}
-Quarto enables you to weave together content and executable code into a finished presentation. To learn more about Quarto presentations see <https://quarto.org/docs/presentations/>.
+
+-    Readable
+-    Reusable
+-    Robust
+
 :::
 
-## Bullets
-::: {style="text-align: left; margin-top: 2em"}
-When you click the **Render** button a document will be generated that includes:
+---
 
--   Content authored with markdown
--   Output from executable code
-:::
-## Line Highlighting
+## What is a style guide and why should I follow one?
 
--   Highlight specific lines for emphasis
--   Incrementally highlight additional lines
+![](images/code-readability-xkdc.png) 
 
-``` {.python code-line-numbers="4-5|7|10"}
-import numpy as np
-import matplotlib.pyplot as plt
-r = np.arange(0, 2, 0.01)
-theta = 2 * np.pi * r
-fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})
-ax.plot(theta, r)
-ax.set_rticks([0.5, 1, 1.5, 2])
-ax.grid(True)
-plt.show()
+---
+
+## What is a style guide and why should I follow one?
+
+A programming style guide consists of rules or guidelines on writing code. These can be seen as conventions or best practices for the community.  
+ 
+Following a style guide will make your code more consistent and readable, both for you and anyone who will interact with your code. It also reduces the chances of errors. 
+
+---
+
+## Some elements of style guides
+
+Guidance of strategic use of **whitespace** and **new lines**:
+
+Compare:
+
+```r
+this <- function(arg1,arg2) res<-arg1*arg2;return(res)
+hurts <- mean(c(this(3,4),this(3,1),this(9,9))); print(hurts)
 ```
+<br>
+```r
+this <- function(arg1,arg2){
+  res <- arg1 * arg2
+  return(res)
+}
 
-::: footer
-Learn more: [Line Highlighting](https://quarto.org/docs/presentations/revealjs/#line-highlighting)
-:::
-
-## Executable Code
-
-```{r}
-#| echo: true
-#| fig-width: 10
-#| fig-height: 4.5
-plot(cars)
+hurts <- mean(
+  c(
+    this(3,4),
+    this(3,1),
+    this(9,9)
+    )
+  )
+print(hurts)
 ```
+The second chunk is longer, but more modular and readable.
 
-::: footer
-Learn more: [Executable Code](https://quarto.org/docs/presentations/revealjs/#executable-code)
-:::
+---
 
-## LaTeX Equations
+## Some elements of style guides
 
-[MathJax](https://www.mathjax.org/) rendering of equations to HTML
+Guidance on descriptive **naming** of functions and variables
 
-::: columns
-::: {.column width="40%"}
-``` tex
-\begin{gather*}
-a_1=b_1+c_1\\
-a_2=b_2+c_2-d_2+e_2
-\end{gather*}
-\begin{align}
-a_{11}& =b_{11}&
-  a_{12}& =b_{12}\\
-a_{21}& =b_{21}&
-  a_{22}& =b_{22}+c_{22}
-\end{align}
+Compare:
+
+```python
+for i in my_shopping_basket:
+  if(test(i)) > 10:
+    purch(i)
+  else:
+    disc(i)
 ```
-:::
-
-::: {.column width="60%"}
-```{=tex}
-\begin{gather*}
-a_1=b_1+c_1\\
-a_2=b_2+c_2-d_2+e_2
-\end{gather*}
+<br>
+```python
+for item in basket:
+  if(testNecessity(item)) > 10:
+    purchase(item)
+  else:
+    discard(item)
 ```
-```{=tex}
-\begin{align}
-a_{11}& =b_{11}&
-  a_{12}& =b_{12}\\
-a_{21}& =b_{21}&
-  a_{22}& =b_{22}+c_{22}
-\end{align}
+In the second chunk, we start functions with a verb and make variable names _just_ long enough to be meaningful
+
+---
+
+## How can I start working with a style guide?
+
+Most programming languages have style guides and these are followed by the community or enforced within organizations.
+
+::: {style="text-align: left"}
+
+- R: [The tidyverse style guide](https://style.tidyverse.org/) 
+
+- Python: [PEP-8](https://peps.python.org/pep-0008/) 
+
+:::
+
+---
+
+## How can I start working with a style guide?
+
+There are tools available to help you with this!
+You can use a **linter** and **(auto)formatter** while coding!
+
+---
+
+## Linters
+
+A linter is a **static** code analysis tool. 
+
+It will browse your code and flag/report issues (style, errors, bugs) as output. 
+Then it's up to the programming to go through the list and fix the issues. 
+
+---
+
+## Linters
+
+::: {style="text-align: left"}
+
+- R: The [lintr](https://lintr.r-lib.org/) package 
+
+- Python: There are several libraries, today we'll use [flake8](https://flake8.pycqa.org/en/latest/)
+
+:::
+
+---
+
+## Linters
+
+The [lintr](https://lintr.r-lib.org/) package in R:
+
+![](https://lintr.r-lib.org/reference/figures/demo.gif)
+
+---
+
+## Linters
+
+The [lintr](https://lintr.r-lib.org/) package in R:
+
+![](images/lintr-r.JPG)
+---
+
+## (Auto)formatters
+
+While linters provide a report of issues, (auto)formatters will browse the code and correct issues automatically/directly.
+
+The corrections will depend on the rules encoded within the package/library.
+
+::: {style="text-align: left"}
+
+- R: The [styler](https://styler.r-lib.org/) package 
+
+- Python: There are several libraries, today we'll use [black](https://black.readthedocs.io/en/latest/)
+
+:::
+
+---
+
+## (Auto)formatters
+
+The [styler](https://styler.r-lib.org/) package in R:
+
+![](https://raw.githubusercontent.com/lorenzwalthert/some_raw_data/master/styler_0.1.gif)
+---
+
+## Your turn!
+
+Try linting and formatting your own code!
+
+Don't have your own code? You can use our exercise files:
+
+::: {style="text-align: left"}
+
+- R: [bad.R]()
+
+- Python: [pep8.py]()
+
+:::
+
+---
+
+## Linters & Formatters in R
+
+Replace `bad.R` with the relevant script name.
+
+Make sure you're in the same working directory as the script!
+
 ```
-:::
-:::
+install.packages(c("lintr", "styler"))
 
-::: footer
-Learn more: [LaTeX Equations](https://quarto.org/docs/authoring/markdown-basics.html#equations)
-:::
+library(lintr)
+library(styler)
 
-## Column Layout {.smaller}
+lint("bad.R")
 
-Arrange content into columns of varying widths:
+# you have two options for styler:
 
-::: columns
-::: {.column width="35%"}
-#### Motor Trend Car Road Tests
+# style using a function
 
-The data was extracted from the 1974 Motor Trend US magazine, and comprises fuel consumption and 10 aspects of automobile design and performance for 32 automobiles.
-:::
+style_file("bad.R")
 
-::: {.column width="3%"}
-:::
+# or use the RStudio add-in (Addins drop-down menu -> Style active file)
 
-::: {.column width="62%"}
-```{r}
-plot(cars)
 ```
-:::
-:::
+---
 
-::: footer
-Learn more: [Multiple Columns](https://quarto.org/docs/presentations/revealjs/#multiple-columns)
-:::
+## Linters & Formatters in Python
+
+Replace 'pep8.py' with the relevant script name if needed.
+
+Make sure you're in the same working directory as the script!
+
+```
+pip install flake8 black
+
+flake8 pep8.py
+
+black pep8.py
+```
 
 # {data-background-color="#FFCD00"}
 
