--- a/presentations/2023-02-22_projects-workflows/2023-02-22_project-management.qmd
+++ b/presentations/2023-02-22_projects-workflows/2023-02-22_project-management.qmd
@@ -66,7 +66,7 @@ and submit your ideas and :+1: in the Issues section :pray:
 -   Project design
 -   Code organization
 -   Data storage and organization
--   Workflow management
+-   Next steps
 
 :::
 
@@ -243,11 +243,16 @@ irsync -rKV i:myfolder "$TMPDIR"/input
 ```
 
 ## Advanced/future topics
+
+::: {style="text-align: left; margin-top: 2em"}
+
 - Makefiles
 - Workflow management tools
 - Continuous integration and testing
 - Containers
+- APIs
 
+:::
 
 ## Resources:
 
