--- a/site/about.qmd
+++ b/site/about.qmd
@@ -12,16 +12,23 @@ The Programming Café is a ‘relaunch’ of the popular R Café external link c
 
 Each Programming Café will have a special theme. The theme is a short presentation or demonstration of (maximum) half an hour. The presentations will be given by attendees of the Café. We are always looking for people who want to present something. Please send an email to Neha Moopen  external linkif you want to give a presentation.
 
-## Who Can Attend
+## Who Can join?
 
-Everyone is welcome at the Programming Café. We expect most attendees will be R or Python users, but users of other programming languages and software are invited as well. You can be of any skill level and at any stage in working with your code and data.
+Everyone is welcome at the Programming Café, as long as you like to code in R, Python or other programming languages. You can be of any skill level and at any stage in working with your code and data. You can be a researcher, student, or support staff at the UU, UMCU, or HU (or even from outside these institutions).
 
 You can bring your programming problems to work on or discuss with the attendees. Even if you do not have an issue, you’re welcome at the Café - just to work on your code or try out the exercises that have been prepared for you.
 
+:::{.callout-tip}
+## Want to get involved?
+
+Got a favorite topic you’d like us to explore, or an idea for a presentation at an upcoming Programming Café? Please let us know via a [GitHub Issue](https://github.com/UtrechtUniversity/programming-cafe/issues/) or [info.rdm@uu.nl](mailto:info.rdm@uu.nl)
+
+:::
+
 ## More information
 
-The Programming Café will take place on a monthly basis, and it will last about two hours (usually towards the end of the workday). Registration is not required. To stay up to date on the planning and themes, please keep an eye on the website of Research Data Management Support and the agenda on the intranet. Or subscribe external linkto the newsletter to stay informed.
+The Programming Café will take place on a monthly basis, and it will last about two hours (usually towards the end of the workday). Registration is not required. To stay up to date on the planning and themes, check or agenda or keep an eye on the website of [Research Data Management Support](https://www.uu.nl/en/research/research-data-management/walk-in-hours-workshops/programming-cafe) and the agenda on the [intranet](intranet.uu.nl/).
 
 ### Walk-in hours for research data and software
 
-For hands-on support on all questions related to research data and/or software, we also have the Walk-In Hours for Data & Software external link which takes place every Monday from 15:00-17:00.
+For hands-on support on all questions related to research data and/or software, we also have the [Walk-In Hours for Data & Software](https://www.uu.nl/en/research/research-data-management/walk-in-hours-workshops/walk-in-hours-research-data-software) which takes place every Monday from 15:00-17:00.
