--- a/site/index.qmd
+++ b/site/index.qmd
@@ -13,6 +13,8 @@ The Programming Cafe is a community event organized every first Thursday of the 
 | __Date__ | 2023 September, 7th 15:00-17:00 | 
 | __Location__ | Living Lab, USP Library |
 
+Literate programming is a programming paradigm introduced by Donald Knuth in which a program is given as an explanation of the program logic in a natural language, such as English, interspersed with snippets of macros and traditional source code, from which a compilable source code can be generated. (Wikipedia) Johan Hidding (eScienceCenter) is passionate about literate programming and developed a package that helps you write Literate Programs in Markdown.
+
 
 ## [About](about.qmd)
 
