add calendar items

--- a/site/agenda.qmd
+++ b/site/agenda.qmd
@@ -1,14 +1,52 @@
 # Agenda
 
-## Next Programming Cafe
+<a href='outlook/pcafe_dec2023.ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add all 2023-2024 editions to calendar</button>
+</a>
 
-- **Date:** Thursday, 7th September
+::: {.callout-note icon=false}
+## Programming Cafe October 2023
+
+- **Date:** Thursday, 5th October
 - **Time:** 15:00-17:00
 - **Location:** Living Lab, University Library (Utrecht Science Park)
-- **Demo/Presentation:**
+- **Demo/Presentation:** Hacktoberfest: Visualization Challenge
 
-**Literate Programming by Johan Hidding (eScienceCenter)**
-Literate programming is a programming paradigm introduced by Donald Knuth in which a program is given as an explanation of the program logic in a natural language, such as English, interspersed with snippets of macros and traditional source code, from which a compilable source code can be generated. (Wikipedia) Johan Hidding (eScienceCenter) is passionate about literate programming and developed a package that helps you write Literate Programs in Markdown.
+<a href='outlook/pcafe_okt2023.ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add october edition to calendar</button>
+</a>
+
+:::
+
+::: {.callout-note icon=false}
+## Programming Cafe November 2023
+
+- **Date:** Thursday, 2nd November
+- **Time:** 15:00-17:00
+- **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
+- **Demo/Presentation:** tbd
+
+<a href='outlook/pcafe_nov2023.ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add November edition to calendar</button>
+</a>
+
+:::
+
+::: {.callout-note icon=false}
+## Programming Cafe December 2023
+
+- **Date:** Thursday, 30th November
+- **Time:** 15:00-17:00
+- **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
+- **Demo/Presentation:** tbd
+
+<a href='outlook/pcafe_dec2023.ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add December edition to calendar</button>
+</a>
+
+:::
+
+
 
 ## Past Programming Cafes
 
