Update viz blogpost

--- a/site/posts/2023-10-05_data-visualization/index.qmd
+++ b/site/posts/2023-10-05_data-visualization/index.qmd
@@ -29,12 +29,18 @@ Additional datasets for the [US](https://www.datarepository.movebank.org/handle/
 ```
 # Get the Data
 
-## R
-
+``` r
+library(readr)
 cats_uk <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
 cats_uk_reference <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
+```
 
-## Python
+``` python
+import pandas as pd
+cats_uk = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
+cats_uk_reference = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
+```
+
 
 
 ```
@@ -103,6 +109,24 @@ reference: https://github.com/MattHondrakis/TidyTuesday/blob/main/2023/01-31-23/
 
 #### Intermediate
 
+Try to create a map (e.g. leaflet (R) or geopandas (python)) and plot a gps track on top of it
 
+![](https://raw.githubusercontent.com/UtrechtUniversity/programming-cafe/583833330eb1c8c056e56c2d7005875422d46355/presentations/2023-08-05_dataviz/images/intermediate.png)
 
 #### Advanced
+
+Try to create an animated gif or movie:
+![](https://raw.githubusercontent.com/UtrechtUniversity/programming-cafe/main/presentations/2023-08-05_dataviz/images/cats_uk_movevis.gif)
+
+#### Example libraries to use
+R:
+- ggplot2
+- leaflet
+- move
+- moveVis
+
+Python:
+- matplotlib
+- geopandas
+- movingpandas
+- (pystac + rioxarray) (to read and visualize sentinel satellite data)
