--- a/site/posts/2023-10-05_data-visualization/index.qmd
+++ b/site/posts/2023-10-05_data-visualization/index.qmd
@@ -2,6 +2,11 @@
 title: "Data Visualization"
 ---
 
+```{=html}
+<iframe width="1050" height="700" src="../../../presentations/2023-08-05_dataviz/2023-10-05_dataviz.html"></iframe>
+```
+
+
 This week's Programming Cafe is all about _Data Visualization_! We are borrowing from the #TidyTuesday initiative and we'll analyzing data from Pet Cats UK.
 
 Once you have gotten hold of the data, you can attempt to reproduce some of the example visualizations (beginner, intermediate, advanced) we've gathered. You can use whatever programming language you like and we encourage you to work in pairs/groups - so you can learn together! 
