--- a/site/posts/2023-10-05_data-visualization/index.qmd
+++ b/site/posts/2023-10-05_data-visualization/index.qmd
@@ -2,20 +2,40 @@
 title: "Data Visualization"
 ---
 
+This week's Programming Cafe is all about _Data Visualization_! We are borrowing from the [#TidyTuesday](https://github.com/rfordatascience/tidytuesday) initiative and we'll be analyzing data from **Pet Cats UK**.
+
 ```{=html}
 <iframe width="900" height="600" src="../../static/2023-10-05_dataviz/2023-10-05_dataviz.html"></iframe>
 ```
 
+## How This Will Go
 
-This week's Programming Cafe is all about _Data Visualization_! We are borrowing from the #TidyTuesday initiative and we'll analyzing data from Pet Cats UK.
+Once you have gotten hold of the data, you can attempt to reproduce some of the example visualizations (beginner, intermediate, advanced) we've gathered below. You can use whatever programming language and packages/libraries you like and we encourage you to work in pairs/groups - so you can learn together! 
 
-Once you have gotten hold of the data, you can attempt to reproduce some of the example visualizations (beginner, intermediate, advanced) we've gathered. You can use whatever programming language you like and we encourage you to work in pairs/groups - so you can learn together! 
+### Example libraries to use
 
-**source for much of the text/code below: https://github.com/rfordatascience/tidytuesday/blob/master/data/2023/2023-01-31/readme.md**
+#### R:
 
-# Pet Cats UK
+- ggplot2
+- leaflet
+- move
+- moveVis
 
-The data this week comes from the [Movebank for Animal Tracking Data](https://www.datarepository.movebank.org/handle/10255/move.882) via [Data is Plural](https://themarkup.org/data-is-plural/2023/01/25/from-jazz-solos-to-cats-on-the-move#:~:text=Giuseppe%20Sollazzo%5D-,Cats%20on%20the%20move,-.%20Between%202013). Thanks @jthomasmock for the suggestion!
+#### Python:
+
+- matplotlib
+- geopandas
+- movingpandas
+- (pystac + rioxarray) (to read and visualize sentinel satellite data)
+
+#### Inspiration:
+[https://www.data-to-viz.com/](https://www.data-to-viz.com/)
+
+## Pet Cats UK
+
+**source for much of the text/code: [https://github.com/rfordatascience/tidytuesday/blob/master/data/2023/2023-01-31/readme.md](https://github.com/rfordatascience/tidytuesday/blob/master/data/2023/2023-01-31/readme.md)**
+
+The data comes from the [Movebank for Animal Tracking Data](https://www.datarepository.movebank.org/handle/10255/move.882) via [Data is Plural](https://themarkup.org/data-is-plural/2023/01/25/from-jazz-solos-to-cats-on-the-move#:~:text=Giuseppe%20Sollazzo%5D-,Cats%20on%20the%20move,-.%20Between%202013). 
 
 > Between 2013 and 2017, Roland Kays et al. convinced hundreds of volunteers in the U.S., U.K., Australia, and New Zealand to strap GPS sensors on their pet cats. The aforelinked datasets include each cat's characteristics (such as age, sex, neuter status, hunting habits) and time-stamped GPS pings.
 
@@ -27,30 +47,33 @@ The data this week comes from the [Movebank for Animal Tracking Data](https://ww
 
 > McDonald JL, Cole H (2020) Data from: The small home ranges and large local ecological impacts of pet cats [United Kingdom]. Movebank Data Repository. [doi:10.5441/001/1.pf315732](http://dx.doi.org/10.5441/001/1.pf315732)
 
-Additional datasets for the [US](https://www.datarepository.movebank.org/handle/10255/move.885), [Australia](https://www.datarepository.movebank.org/handle/10255/move.876), and [New Zealand](https://www.datarepository.movebank.org/handle/10255/move.879) are also available for download, but they were too large for us to include them directly.
+Additional datasets for the [US](https://www.datarepository.movebank.org/handle/10255/move.885), [Australia](https://www.datarepository.movebank.org/handle/10255/move.876), and [New Zealand](https://www.datarepository.movebank.org/handle/10255/move.879) are also available for download, but they are not included.
 
-### Get the data here:
+## Get the data here
+
+### R
 
 ``` r
 library(readr)
+
 cats_uk <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
 cats_uk_reference <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
 ```
 
+### Python
+
 ``` python
 import pandas as pd
-cats_uk = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
-cats_uk_reference = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
+
+cats_uk <- pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
+cats_uk_reference <- pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
 ```
-
-
-
 
 ### Data Dictionary
 
 Full dictionaries are available on [Movebank](https://www.datarepository.movebank.org/handle/10255/move.882)
 
-# `cats_uk.csv`
+#### `cats_uk.csv`
 
 |variable                 |class     |description              |
 |:------------------------|:---------|:------------------------|
@@ -66,7 +89,7 @@ Full dictionaries are available on [Movebank](https://www.datarepository.moveban
 |manually_marked_outlier         |logical   |Identifies events flagged manually as outliers, typically using the Event Editor in Movebank, and may also include outliers identified using other methods. Outliers have the value TRUE.|
 |study_name                      |character |The name of the study in Movebank.|
 
-# `cats_uk_reference.csv`
+#### `cats_uk_reference.csv`
 
 |variable                      |class     |description                   |
 |:-----------------------------|:---------|:-----------------------------|
@@ -87,54 +110,119 @@ Full dictionaries are available on [Movebank](https://www.datarepository.moveban
 |study_site                    |character |A location such as the deployment site or colony, or a location-related group such as the herd or pack name.|
 |age_years                     |double    |The age of the animal at the beginning of the deployment, in years. "0" indicates that the animal was < 1 year old.|
 
-### Example Data Visualizations
+## Example Data Visualizations
 
-#### Beginner
+### Beginner
 
-Try:
+Beginners can try:
 
-- reading in the data
-- plotting number of cats per household
-- plotting prey caught per year
-- plotting hours spent indoors
-- plotting the gender of the cats in the dataset
-- plotting the age of the cats
+1. Reading in the data
+
+2. Plotting the number of cats per household
 
 ![](https://github.com/MattHondrakis/TidyTuesday/raw/main/2023/01-31-23/UK-Cats_files/figure-gfm/unnamed-chunk-2-1.png)
+
+3. Plotting the number of prey caught per year
+
 ![](https://github.com/MattHondrakis/TidyTuesday/raw/main/2023/01-31-23/UK-Cats_files/figure-gfm/unnamed-chunk-3-1.png)
+
+4. Plotting the number of hours spent indoors
+
 ![](https://github.com/MattHondrakis/TidyTuesday/raw/main/2023/01-31-23/UK-Cats_files/figure-gfm/unnamed-chunk-4-1.png)
+
+5. Plotting the gender of the cats in the dataset
+
 ![](https://github.com/MattHondrakis/TidyTuesday/raw/main/2023/01-31-23/UK-Cats_files/figure-gfm/unnamed-chunk-5-1.png)
+
+- Plotting the age of the cats
+
 ![](https://github.com/MattHondrakis/TidyTuesday/raw/main/2023/01-31-23/UK-Cats_files/figure-gfm/unnamed-chunk-6-1.png)
 
-reference: https://github.com/MattHondrakis/TidyTuesday/blob/main/2023/01-31-23/UK-Cats.md
+The above plots are referenced from: [https://github.com/MattHondrakis/TidyTuesday/blob/main/2023/01-31-23/UK-Cats.md](https://github.com/MattHondrakis/TidyTuesday/blob/main/2023/01-31-23/UK-Cats.md).
+The author has code snippets in R showing how they obtained the plots.
 
-#### Intermediate
+You can get tips on building bar plots in both R & Python on the following page: [https://www.data-to-viz.com/graph/histogram.html](https://www.data-to-viz.com/graph/histogram.html)
+
+### Intermediate
+
+Intermediate users have two options: 
+
+#### Creating a `treemap` of the data.
+
+![](https://github.com/poncest/tidytuesday/raw/main/2023/Week_05/2023_05.png)
+
+The above plot is referenced from: [https://github.com/poncest/tidytuesday/tree/main/2023/Week_05](https://github.com/poncest/tidytuesday/tree/main/2023/Week_05). The author has a script in R showing how they obtained the plot.
+
+You can get tips on building treemaps in both R & Python on the following page: [https://www.data-to-viz.com/graph/treemap.html](https://www.data-to-viz.com/graph/treemap.html)
+
+Here is a human-readable breakdown of the steps, provided by ChatGPT:
+
+1. **Load Packages & Setup:**
+    - Load necessary software packages using the pacman library.
+    - Set up the figure size and resolution for plotting.
+
+2. **Read in the Data:**
+    - Load data for the TidyTuesday challenge for 2023, week 05.
+    - Clean and organize the data.
+        
+3. **Examine the Data:**
+    - Use glimpse to see the structure of the cats_uk and cats_uk_reference datasets.
+    - List unique values in the "tag_id" column of both datasets.
+    - Combine the data using a left join operation and save memory.
+
+4. **Tidy the Data:**
+    - Remove outliers from the data.
+    - Convert timestamp data to date format.
+    - Group and summarize the data based on specific columns.
+    - Clean and prepare the data for visualization.
+
+5. **Create Visualization:**
+    - Set up plot aesthetics including colors, titles, and captions.
+    - Define fonts for text elements.
+    - Build the main plot using the ggplot2 package with a treemap representation.
+    - Customize plot labels, colors, and themes to make it visually appealing.
+
+#### Map
 
 Try to create a map (e.g. leaflet (R) or geopandas (python)) and plot a gps track on top of it
 
 ![](https://raw.githubusercontent.com/UtrechtUniversity/programming-cafe/main/presentations/2023-10-05_dataviz/images/intermediate.png)
 
-#### Advanced
+### Advanced
 
-Try to create an animated gif or movie:
-![](https://raw.githubusercontent.com/UtrechtUniversity/programming-cafe/main/presentations/2023-10-05_dataviz/images/cats_uk_movevis.gif)
+Advanced users can try plotting the data onto a map and adding an animation element.
 
-#### Example libraries to use
+![](https://github.com/fblpalmeira/cats_uk/blob/main/data/cats_uk_movevis.gif?raw=true)
 
-R:
+The above plot is referenced from: [https://github.com/fblpalmeira/cats_uk/blob/main/README.md](https://github.com/fblpalmeira/cats_uk/blob/main/README.md). The author has a script in R showing how they obtained the plot.
 
-- ggplot2
-- leaflet
-- move
-- moveVis
+You can get tips on building maps in both R & Python on the following page: [https://www.data-to-viz.com/graph/map.html](https://www.data-to-viz.com/graph/map.html)
 
-Python:
+Here is a human-readable breakdown of the steps, provided by ChatGPT:
 
-- matplotlib
-- geopandas
-- movingpandas
-- (pystac + rioxarray) (to read and visualize sentinel satellite data)
+1. **Read in the Data**: Begin by reading two CSV files from the internet. You can do this using software like R. The files you need are named cats_uk.csv and cats_uk_reference.csv.
 
-Inspiration:
-[https://www.data-to-viz.com/](https://www.data-to-viz.com/)
+2. **View the Data**: After reading the data, use a tool or function (like the View function in R) to visually inspect the contents of both data files. This step helps you understand what's in the data.
+
+3. **Load Libraries**: Make sure you have certain software libraries installed and loaded. These libraries include dplyr, move, moveVis, maptools, magrittr, and ggplot2. They provide tools for data manipulation and visualization.
+
+4. **Combine and Filter Data**: Use the dplyr library to combine the data from the two CSV files based on a common column called "tag_id." After combining, filter the data to select only specific cat names like "Bear," "Coco," etc.
+
+5. **Convert Timestamps**: Convert the timestamps in the filtered data from a text format to a date-time format. This makes it easier to work with time-based data.
+
+6. **Create a Move Object**: Using the filtered and timestamp-converted data, create a "move object" that represents the movement of cats. This object specifies the columns for longitude, latitude, time, and track ID.
+
+7. **Align Data**: Adjust the timestamps in the move object to align them at a specific resolution, such as daily intervals. This step aggregates the data for each day.
+
+8. **Generate Map Frames**: Create map frames to visualize cat movements. You can customize these frames by adding things like labels, a north arrow, and a scale bar.
+
+9. **Add Text**: Include text on the map frames, such as a Twitter handle, at a specific location.
+
+10. **Preview a Frame**: Optionally, you can preview one of the map frames to see how it looks.
+
+11. **Generate an Animation**: Finally, use a function or tool (like animate_frames) to turn the map frames into an animated GIF. This GIF will show the movements of the selected cats over time.
+
+## References
+
+Will be updated to be more neat, the authors of the data and code and resources retain all their copyright - they are awesome!
 
