--- a/site/posts/2023-10-05_data-visualization/index.qmd
+++ b/site/posts/2023-10-05_data-visualization/index.qmd
@@ -65,8 +65,8 @@ cats_uk_reference <- readr::read_csv('https://raw.githubusercontent.com/rfordata
 ``` python
 import pandas as pd
 
-cats_uk <- pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
-cats_uk_reference <- pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
+cats_uk = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk.csv')
+cats_uk_reference = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-01-31/cats_uk_reference.csv')
 ```
 
 ### Data Dictionary
